--- a/src/components/output/output.style.scss
+++ b/src/components/output/output.style.scss
@@ -16,6 +16,10 @@ span{
   min-height: 200px;
 }
 
+.h4{
+  font-weight: 700
+}
+
 .searchbox{
     display: flex;
     justify-content: center;
@@ -37,6 +41,11 @@ span{
 
 p{
     text-align: center;
+    font-weight: 100
+}
+
+hr{
+  width: 50%;
 }
 
 
