--- a/src/components/navigation/navigation.style.scss
+++ b/src/components/navigation/navigation.style.scss
@@ -7,10 +7,19 @@
     opacity: 0.9;
 }
 
+.style{
+    border-radius: 30px;
+    background-color: lightgreen;
+}
+
 
 li {
     padding: 20px;
     display: inline;
 }
 
+a{
+    color:black;
+    font-weight: 900;
+}
 
