added some particles

--- a/src/components/section/section.style.scss
+++ b/src/components/section/section.style.scss
@@ -1,6 +1,7 @@
 .howtoDetails{
     background-color: black;
     position: relative;
+    opacity: 0.97;
 }
 
 .d_container{
@@ -40,8 +41,11 @@ a{
 }
 
 .particles{
-    position: fixed;
+    position: absolute;
+    top: 0;
+    bottom: 0;
     right: 0;
     left: 0;
+    overflow: hidden;
     z-index: -1;
 }
