--- a/src/components/section/section.style.scss
+++ b/src/components/section/section.style.scss
@@ -9,6 +9,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    isolation: isolate;
 }
 .firstbox{
     padding: 20px;
@@ -31,7 +32,7 @@ img{
 }
 
 #link{
-    color: white;
+    color: blue;
     font-weight: 100;
     font-size: 0.7em;
 }
