--- a/src/components/section/section.style.scss
+++ b/src/components/section/section.style.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     isolation: isolate;
 }
-.firstbox{
+.portion{
     padding: 20px;
     margin: 80px;
     margin-top: 100px;
@@ -20,10 +20,9 @@
     margin-right: 20px;
 }
 
-.secondbox{
-    margin:80px;
-    margin-left: 0;
-    text-align: center;
+.image{
+    padding: 20px;
+    margin: 60px;
 }
 
 img{
