--- a/src/components/output/output.style.scss
+++ b/src/components/output/output.style.scss
@@ -12,7 +12,7 @@ span{
 .divstyle{
   border: 4px solid rgb(120, 200, 247);
   display: inline-block;
-  width: 140px;
+  min-width: 140px;
   min-height: 200px;
   margin-bottom: 10px;
 }
