--- a/src/components/searchbox/searchbox.style.scss
+++ b/src/components/searchbox/searchbox.style.scss
@@ -1,3 +1,11 @@
 .box{
-    border-radius: 10px
+    border-radius: 0;
+    border: 0;
+    background-color: transparent;
+    color: green;
 }
+
+//form input:focus{
+    //background-color: transparent;
+    //box-shadow: none !;
+//}
