--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,5 @@ body{
   background-position: center;
   background-size: cover;
   overflow: hidden;
-  min-height: 500px
+  min-height: 500px;
 }
