--- a/src/components/output/output.style.scss
+++ b/src/components/output/output.style.scss
@@ -10,7 +10,7 @@ span{
 }
 
 .divstyle{
-  border: 4px solid rgb(120, 200, 247);
+  //border: 4px solid rgb(120, 200, 247);
   display: inline-block;
   min-width: 140px;
   min-height: 200px;
